Push SVG loading image a bit to the right, fixes view on mobile devices

--- a/sass/_status.scss
+++ b/sass/_status.scss
@@ -1,6 +1,6 @@
 .status-svg {
   // "Loading graph…" image
-  background: url('data:image/svg+xml;charset=UTF-8,<svg width="200" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><text y="30" fill="white" font-size="24" font-family="sans-serif">Loading graph…</text></svg>') no-repeat center top;
+  background: url('data:image/svg+xml;charset=UTF-8,<svg width="200" height="100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><text y="30" x="1" fill="white" font-size="24" font-family="sans-serif">Loading graph…</text></svg>') no-repeat center top;
 
   @media screen and (max-width: 200px) {
     background: none;
